--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
           <h1>Netload Graph</h1>
           <h2>Display network load on a graph</h2>
         </header>
-
+        <p>
+            <div>Main Window</div>
+            <img src="images/netloadgraph-main.png">
+        </p>
+        <p>
+            <div>Preferences Dialog</div>
+            <img src="images/netloadgraph-preferences.png">
+        </p>
         <section id="downloads" class="clearfix">
           <a href="https://github.com/rafaello7/netloadgraph/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/rafaello7/netloadgraph/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
