--- a/index.html
+++ b/index.html
@@ -21,17 +21,8 @@
           <h1>Netload Graph</h1>
           <h2>Display network load on a graph</h2>
         </header>
-        <p>
-            <div>Main Window</div>
-            <img src="images/netloadgraph-main.png">
-        </p>
-        <p>
-            <div>Preferences Dialog</div>
-            <img src="images/netloadgraph-preferences.png">
-        </p>
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/rafaello7/netloadgraph/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/rafaello7/netloadgraph/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/rafaello7/netloadgraph/releases" id="download-zip" class="button"><span>Downloads</span></a>
           <a href="https://github.com/rafaello7/netloadgraph" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
@@ -39,9 +30,17 @@
 
         <section id="main_content">
           <h3>
-<a id="netload-graph" class="anchor" href="#netload-graph" aria-hidden="true"><span class="octicon octicon-link"></span></a>NetLoad Graph</h3>
-
-<p>A simple Linux tool to display network load on a graph.</p>
+            NetLoad Graph
+          </h3>
+          <p>A simple Linux tool to display network load on a graph.</p>
+          <p>
+              <div>Main Window</div>
+              <img src="images/netloadgraph-main.png">
+          </p>
+          <p>
+              <div>Preferences Dialog</div>
+              <img src="images/netloadgraph-preferences.png">
+          </p>
         </section>
 
         <footer>
